# chronomaly

./: .env.example  .gitignore  BUG_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
chronomaly/: __init__.py
chronomaly/application/workflows/: __init__.py  anomaly_detection_workflow.py  forecast_workflow.py  notification_workflow.py
chronomaly/infrastructure/anomaly_detectors/: __init__.py  forecast_actual.py
chronomaly/infrastructure/comparators/: __init__.py  base.py  forecast_actual.py
chronomaly/infrastructure/data/readers/: __init__.py  dataframe_reader.py
chronomaly/infrastructure/data/readers/databases/: __init__.py  bigquery.py  sqlite.py
chronomaly/infrastructure/data/readers/files/: __init__.py  csv.py
chronomaly/infrastructure/data/writers/: __init__.py
chronomaly/infrastructure/data/writers/databases/: __init__.py  bigquery.py  sqlite.py
chronomaly/infrastructure/data/writers/files/: __init__.py  csv.py
chronomaly/infrastructure/forecasters/: __init__.py  timesfm.py
chronomaly/infrastructure/notifiers/: __init__.py  base.py  email.py  slack.py
chronomaly/infrastructure/transformers/: __init__.py  pivot.py
chronomaly/infrastructure/transformers/filters/: __init__.py  base.py  column_filter.py  cumulative_threshold.py  value_filter.py
chronomaly/infrastructure/transformers/formatters/: __init__.py  base.py  column_formatter.py  column_selector.py  percentage_formatter.py
chronomaly/shared/: __init__.py
examples/: ANOMALY_DETECTION_README.md  README.md  anomaly_detection_workflow_example.py  data_sources_comprehensive_example.py  example_anomaly_detection_bigquery.py  example_anomaly_detection_simple.py  example_anomaly_detection_sqlite.py  example_bigquery.py  example_bigquery_to_bigquery.py  example_csv.py  example_multi_dimension.py  example_multi_index.py  example_point_forecast.py  example_sqlite.py  example_without_transform.py
examples/advanced/: anomaly_with_filters.py
forecast_library/: __init__.py  pipeline.py
forecast_library/data_sources/: __init__.py  base.py  bigquery_source.py  csv_source.py  sqlite_source.py
forecast_library/forecasters/: __init__.py  base.py  timesfm.py
forecast_library/outputs/: __init__.py  base.py  bigquery_writer.py  sqlite_writer.py
forecast_library/transformers/: __init__.py  pivot.py
templates/email/: default.html  simple.html.example
templates/slack/: default.json
tests/: test_anomaly_detection.py  test_anomaly_detection_edge_cases.py  test_column_selector.py  test_csv_writer.py  test_email_subject.py  test_filters.py  test_formatters.py  test_integration.py  test_notification_workflow.py  test_transformers.py  test_workflows.py
