[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "chronomaly"
version = "0.1.0"
description = "A flexible and extensible Python library for time series forecasting using Google TimesFM"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache License 2.0"}
authors = [
    {name = "Chronomaly Contributors"}
]
keywords = ["time-series", "forecasting", "timesfm", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
bigquery = [
    "google-cloud-bigquery>=3.10.0",
    "db-dtypes>=1.1.0",
]
# TimesFM backend options (install TimesFM from GitHub first: pip install git+https://github.com/google-research/timesfm.git)
# torch backend is already included in base dependencies
flax = [
    "flax",
    "optax",
    "einshape",
    "orbax-checkpoint",
    "jaxtyping",
    "jax[cuda]",
]
xreg = [
    "jax[cuda]",
    "scikit-learn",
]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
all = [
    "google-cloud-bigquery>=3.10.0",
    "db-dtypes>=1.1.0",
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/sinancan34/chronomaly"
Repository = "https://github.com/sinancan34/chronomaly"
Issues = "https://github.com/sinancan34/chronomaly/issues"

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.package-data]
chronomaly = ["py.typed"]
