[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "chronomaly"
version = "1.0.13"
description = "A flexible and extensible Python library for time series forecasting using Google TimesFM"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    {name = "Chronomaly Contributors"}
]
keywords = ["time-series", "forecasting", "timesfm", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.7.0",
    "google-cloud-bigquery>=3.10.0",
    "google-cloud-bigquery-storage>=2.34.0",
    "pandas-gbq>=0.26.1",
    "db-dtypes>=1.1.0",
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "timesfm[torch] @ git+https://github.com/google-research/timesfm.git",
]

# TimesFM backend options (torch backend is included in base dependencies)
[project.optional-dependencies]
flax = [
    "timesfm[flax] @ git+https://github.com/google-research/timesfm.git",
]
xreg = [
    "timesfm[xreg] @ git+https://github.com/google-research/timesfm.git",
]

[project.urls]
Homepage = "https://github.com/sinancan34/chronomaly"
Repository = "https://github.com/sinancan34/chronomaly"
Issues = "https://github.com/sinancan34/chronomaly/issues"

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.package-data]
chronomaly = ["py.typed"]
